Total nuke knox and trustonic

--- a/arch/arm64/configs/goku_defconfig
+++ b/arch/arm64/configs/goku_defconfig
@@ -947,7 +947,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_NETLINK_DIAG is not set
 # CONFIG_NET_MPLS_GSO is not set
 # CONFIG_HSR is not set
-CONFIG_KNOX_NCM=y
+# CONFIG_KNOX_NCM is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
@@ -4271,8 +4271,8 @@ CONFIG_SEC_VIB=y
 # CONFIG_SENSORS_SSP_BAROMETER_LPS22H is not set
 # CONFIG_SENSORS_SSP_BAROMETER_LPS25H is not set
 # CONFIG_SENSORS_SSP_BAROMETER_BMP280 is not set
-CONFIG_FIVE_USE_TRUSTONIC=y
-CONFIG_FIVE_TRUSTLET_PATH="five/ffffffff000000000000000000000072.tlbin"
+# CONFIG_FIVE_USE_TRUSTONIC is not set
+# CONFIG_FIVE_TRUSTLET_PATH="five/ffffffff000000000000000000000072.tlbin"
 
 #
 # Firmware Drivers
